--- a/package.json
+++ b/package.json
@@ -24,11 +24,20 @@
     "vite": "^7.0.4"
   },
   "dependencies": {
+    "@codemirror/basic-setup": "^0.20.0",
+    "@codemirror/lang-json": "^6.0.2",
+    "@codemirror/language": "^6.11.2",
+    "@codemirror/state": "^6.5.2",
+    "@codemirror/theme-one-dark": "^6.1.3",
+    "@codemirror/view": "^6.38.1",
+    "@lezer/highlight": "^1.2.1",
+    "@lezer/json": "^1.0.3",
     "@octokit/rest": "^22.0.0",
     "@tailwindcss/postcss": "^4.1.11",
     "@tailwindcss/vite": "^4.1.11",
     "@types/node": "^24.2.1",
     "autoprefixer": "^10.4.21",
+    "codemirror": "^6.0.2",
     "octokit": "^5.0.3",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11",
