--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@sveltejs/vite-plugin-svelte": "^6.0.0",
     "@tailwindcss/forms": "^0.5.10",
     "@types/uuid": "^10.0.0",
+    "knip": "^5.62.0",
     "svelte": "^5.0.0",
     "svelte-check": "^4.0.0",
     "typescript": "^5.0.0",
