--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "codemirror": "^6.0.2",
     "octokit": "^5.0.3",
     "postcss": "^8.5.6",
+    "prettier": "^3.6.2",
     "tailwindcss": "^4.1.11",
     "uuid": "^11.1.0"
   },
